Remove XML-based EBNF transformation
Removed various builders and utilities related to EBNF transformation that relied on XML. This refactoring aims to simplify the codebase and eliminate dependencies on XML processing libraries.